# reference-python-project

./: .bandit  .editorconfig  .env.glue.template  .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .terraform-docs.yml  .terraform-lint.hcl  .tflint.hcl  .wslconfig  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  PROJECT_INIT_DOCUMENTATION.md  QUICK_START.md  README.md  SETUP.md  TODO.md  docker-compose.yml  junit.xml  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  sample_config.yml  setup.py  template_manifest.yml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-cloudformation.yml  cd-pipeline.yml  cd-terraform.yml  ci-pipeline.yml  ci.yml  container-build.yml  dependency-check.yml  dependency-security.yml  docs.yml  iac-ci.yml  pre-commit-checks.yml  python-ci.yml
docs/: architecture.md  automation.md  development.md  hexagonal_architecture_example.py  pre-commit.md  testing.md  vscode_integration.md  wizard.md
docs/assets/stylesheets/: extra.css
docs/getting-started/: setup.md
docs/overrides/partials/: footer.html
docs/overrides/stylesheets/: palette.css
examples/: README.md  aws_secrets_rotation_lambda.py  aws_services_testing.py  config.yml  glue_job_example.py  kinesis_streaming_example.py  quickstart_example.py  template_manifest.yml
examples/lambda_functions/: data_processor.py  hello_world.py  serverless.yml  test_event.json  test_lambda.bat
infrastructure/cloudformation/: README.md  enterprise-standards.md  main.yml  s3-data-lake.yaml
infrastructure/terraform/: .terraform-docs.yml  .tflint.hcl  README.md  main.tf
infrastructure/terraform/dev/: README.md  main.tf
infrastructure/terraform/modules/: README.md
infrastructure/terraform/modules/data_lake/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/policy/: coverage.rego
policies/cloudformation/: security.rego
policies/terraform/: security.rego
scripts/: README.md  cleanup.sh  cleanup_docs.py  cleanup_docs_empty_dirs.py  cleanup_docs_empty_dirs.sh  cleanup_project.py  cleanup_repository.py  consolidate_docs.py  delete_obsolete_files.py  diagnostics.py  docs.sh  find_obsolete_docs.py  fix_documentation.py  fix_precommit.py  generate_api_docs.py  generate_docs.sh  generate_terraform_docs.py  init_project.py  interactive_wizard.py  modernize_project.py  non_admin_setup.ps1  onboard_developer.sh  open_in_vscode.bat  optimize_py312.py  project_health_dashboard.py  run_cleanup.py  run_glue_job_local.py  run_interactive_wizard.py  run_optimized.ps1  run_precommit.py  run_tox_tests.ps1  run_tox_tests.sh  setup.sh  setup_nexus.py  setup_podman.ps1  setup_precommit.py  tasks.py  template_processor.py  template_utils.py  test_lambda_local.py  (+6 more)
src/: README.md
src/enterprise_data_engineering/: __init__.py  __main__.py  cli.py
src/enterprise_data_engineering/cli/: __init__.py  automation.py  data.py  main.py
src/enterprise_data_engineering/common_utils/: __init__.py  aws.py  config_utils.py  file_utils.py  logging_utils.py  nexus_utils.py
src/enterprise_data_engineering/compat/: __init__.py
src/enterprise_data_engineering/data_pipelines/: __init__.py  pipeline.py
src/enterprise_data_engineering/examples/: module_template.py  pattern_matching.py  py312_features.py  version_specific.py
src/enterprise_data_engineering/spark/: __init__.py  session.py  transformations.py
src/reference_python_project/cli/: __init__.py  automation.py  main.py
src/reference_python_project/utils/: autosys.py  logging.py
tests/: README.md  conftest.py  test_aws_mocking_example.py
tests/common_utils/: test_aws.py  test_aws_secrets_rotation.py  test_config_utils.py  test_file_utils.py  test_logging_utils.py
tests/initialization/: test_init_project.py  test_template_processor.py
tests/shared/fixtures/: test_config.yml
tests/test_aws/: README.md  check_moto_mock.py  test_aws.py  test_aws_mocking_enhanced.py  test_aws_mocking_example.py  test_aws_secrets_rotation.py
tests/test_enterprise_data_engineering/: test_cli.py
tests/test_wizards/: conftest.py  run_wizard_tests.py  test_init_project.py  test_interactive_wizard.py  test_run_interactive_wizard.py  test_wizard_scripts.py
tests/unit/aws_mocking_examples/: README.md  test_aws_integration.py  test_dynamodb_operations.py  test_s3_operations.py
tests/unit/spark/: test_transformations.py
